--- a/public/css/color1.css
+++ b/public/css/color1.css
@@ -2459,7 +2459,10 @@ section .black-layer:before {
   filter: invert(1);
 }
 
-.error {
+.error{
+  color:red;
+}
+/* .error {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -2468,7 +2471,7 @@ section .black-layer:before {
   color: #eee;
   padding: 20px;
   display: none;
-}
+} */
 
 .search-section {
   margin-top: -75px;
